--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.0",
     "cloudinary": "^1.26.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
@@ -18,15 +19,15 @@
     "mongoose": "^5.13.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport-local-mongoose": "^6.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "sanitize-html": "^2.4.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
